--- a/src/app/components/transferencia/listar-extrato/listar-extrato.html
+++ b/src/app/components/transferencia/listar-extrato/listar-extrato.html
@@ -1,1 +1,60 @@
-<p>listar-extrato works!</p>
+<div class="container">
+  <h2>Extrato de Agendamentos</h2>
+
+  <mat-form-field appearance="outline" class="filter">
+    <mat-label>Pesquisar</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Filtrar por conta ou ID">
+    <mat-icon matSuffix>search</mat-icon>
+  </mat-form-field>
+
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="contaOrigem">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Conta Origem </th>
+      <td mat-cell *matCellDef="let element">
+        <mat-icon color="warn" *ngIf="element.contaOrigem === 'SuaConta'">arrow_upward</mat-icon>
+        {{element.contaOrigem}}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="contaDestino">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Conta Destino </th>
+      <td mat-cell *matCellDef="let element">
+        <mat-icon color="primary" *ngIf="element.contaDestino === 'SuaConta'">arrow_downward</mat-icon>
+        {{element.contaDestino}}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="valor">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor (R$) </th>
+      <td mat-cell *matCellDef="let element" [ngClass]="{'high-value': element.valor > 1000}">
+        {{element.valor | number:'1.2-2'}}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="taxa">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Taxa (R$) </th>
+      <td mat-cell *matCellDef="let element"> {{element.taxa | number:'1.2-2'}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="dtAgendamento">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Data Agendamento </th>
+      <td mat-cell *matCellDef="let element"> {{element.dtAgendamento | date:'dd/MM/yyyy'}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="dtTransferencia">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Data Transferência </th>
+      <td mat-cell *matCellDef="let element"> {{element.dtTransferencia | date:'dd/MM/yyyy'}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="table-row"></tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+</div>
